--- a/presto-native-execution/Makefile
+++ b/presto-native-execution/Makefile
@@ -49,6 +49,9 @@ ifeq ($(PRESTO_ENABLE_JWT), ON)
   EXTRA_CMAKE_FLAGS += -DPRESTO_ENABLE_JWT=ON
   output := $(call deprecate_message,"PRESTO_ENABLE_JWT")
 endif
+ifeq ($(PRESTO_ENABLE_TPCDS_CONNECTOR), ON)
+  EXTRA_CMAKE_FLAGS += -DPRESTO_ENABLE_TPCDS_CONNECTOR=ON
+endif
 ifneq ($(PRESTO_STATS_REPORTER_TYPE),)
   EXTRA_CMAKE_FLAGS += -DPRESTO_STATS_REPORTER_TYPE=$(PRESTO_STATS_REPORTER_TYPE)
   output := $(call deprecate_message,"PRESTO_STATS_REPORTER_TYPE")
