Add E2E testing for Dynamic Functions.
Co-authored-by: Pramod Satya <pramod.satya@ibm.com>
Co-authored-by: mohsaka <michael.ohsaka@ibm.com>

--- a/.github/workflows/prestocpp-linux-build-and-unit-test.yml
+++ b/.github/workflows/prestocpp-linux-build-and-unit-test.yml
@@ -79,6 +79,8 @@ jobs:
           github.event_name == 'schedule' || needs.changes.outputs.codechange == 'true'
         run: |
           source /opt/rh/gcc-toolset-12/enable
+          cp -r presto-native-tests/presto_cpp/tests presto-native-execution/presto_cpp/main/dynamic_registry
+          echo "add_subdirectory(tests)" >> presto-native-execution/presto_cpp/main/dynamic_registry/CMakeLists.txt
           cd presto-native-execution
           cmake \
             -B _build/release \
@@ -126,6 +128,7 @@ jobs:
           path: |
             presto-native-execution/_build/release/presto_cpp/main/presto_server
             presto-native-execution/_build/release/velox/velox/functions/remote/server/velox_functions_remote_server_main
+            presto-native-execution/_build/release/presto_cpp/main/dynamic_registry/tests/
 
   prestocpp-linux-presto-e2e-tests:
     needs: [changes, prestocpp-linux-build-for-test]
